force-app/main/default/objects/QuoteRequestDetail__c/QuoteRequestDetail__c.object-meta.xml
<CustomObject>
    <label>Quota Request Detail</label>
    <nameField>
        <label>Family ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Request Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>