force-app/main/default/objects/QuoteRequestDetail__c/fields/Add_Qty_pcs__c.field-meta.xml
<CustomField>
    <fullName>Add_Qty_pcs__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Add Qty (pcs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>