force-app/main/default/objects/QuoteRequestDetail__c/fields/FamilyType__c.field-meta.xml
<CustomField>
    <fullName>FamilyType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Family Type</label>
    <referenceTo>FamiliesTypes__c</referenceTo>
    <relationshipName>Quote_Request_Details</relationshipName>
    <type>Lookup</type>
</CustomField>