force-app/main/default/objects/QuoteRequestDetail__c/fields/Group3__c.field-meta.xml
<CustomField>
    <fullName>Group3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group3</label>
    <referenceTo>Group3__c</referenceTo>
    <relationshipName>Quote_Request_Details</relationshipName>
    <type>Lookup</type>
</CustomField>