force-app/main/default/objects/QuoteRequestDetail__c/fields/QuoteRequestFamily__c.field-meta.xml
<CustomField>
    <fullName>QuoteRequestFamily__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Request Family</label>
    <referenceTo>QuoteRequestFamily__c</referenceTo>
    <relationshipName>Quote_Request_Details</relationshipName>
    <type>Lookup</type>
</CustomField>