force-app/main/default/objects/QuoteRequestDetail__c/fields/QuoteRequestHeader__c.field-meta.xml
<CustomField>
    <fullName>QuoteRequestHeader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Request Header</label>
    <referenceTo>QuoteRequestHeader__c</referenceTo>
    <relationshipName>Quote_Request_Details</relationshipName>
    <type>Lookup</type>
</CustomField>