force-app/main/default/objects/QuoteRequestDetail__c/fields/QuoteStructureDetail__c.field-meta.xml
<CustomField>
    <fullName>QuoteStructureDetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Structure Detail</label>
    <referenceTo>QuoteStructureDetail__c</referenceTo>
    <relationshipName>Quote_Request_Details</relationshipName>
    <type>Lookup</type>
</CustomField>