force-app/main/default/objects/QuoteRequestDetail__c/fields/RoutesQuotesH__c.field-meta.xml
<CustomField>
    <fullName>RoutesQuotesH__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Route Quotes Hierarchy</label>
    <referenceTo>RouteQuotesH__c</referenceTo>
    <relationshipLabel>Quote Request Details</relationshipLabel>
    <relationshipName>Quota_Request_Details</relationshipName>
    <type>Lookup</type>
</CustomField>