force-app/main/default/objects/QuoteRequestDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>FamilyType__c</columns>
    <columns>Family__c</columns>
    <columns>DateBegin__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>Manager__c</columns>
    <columns>Group3__c</columns>
    <columns>Region__c</columns>
    <columns>Percent__c</columns>
    <columns>Quote_t__c</columns>
    <columns>AddQty_t__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>